# my_fitness_app

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.qa.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: AGENTS_TARGET.md  architecture.md  codex-workflow.md  codex_task_pack_README.md  dev-python.md  fitness_app_spec_hebrew_html.html  garmin-imports.md  project_context.md  task_order.md  template-usage.md
docs/tasks/: 00_initialize_fitness_app_foundation.md  01_sqlite_persistence_foundation.md  02_workout_crud.md  03_strength_training_details.md  04_sleep_and_daily_logs.md  05_manual_meal_logging.md  06_raw_import_file_storage.md  (+7 more)
scripts/: clean.sh  init_from_template.sh  lint.sh  test.sh
templates/: index.html  layout.html
tests/: test_app.py  test_config.py  test_daily_log_repository.py  test_daily_log_routes.py  test_daily_log_service.py  test_dashboard_routes.py  test_dashboard_service.py  test_database.py  test_garmin_csv_import_service.py  test_garmin_gpx_import_service.py  test_garmin_tcx_import_service.py  test_import_file_service.py  test_import_routes.py  test_imported_file_repository.py  test_meal_repository.py  test_meal_routes.py  test_meal_service.py  test_model.py  test_services.py  test_sleep_repository.py  test_sleep_routes.py  test_sleep_service.py  test_strength_repository.py  test_strength_service.py  test_workout_repository.py  test_workout_routes.py  test_workout_service.py
(+77 files in other folders)
