[project]
name = "my-fitness-app"
version = "0.1.0"
description = "Personal fitness tracking application"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.0,<4.0",
  "python-dotenv>=1.0,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.setuptools.packages.find]
where = ["src"]
